- Rearrange and test RC5

--- a/.gitignore
+++ b/.gitignore
@@ -97,59 +97,12 @@
 ![Ii]mgxml/deadbase/elix/50/*.png
 ![Ii]mgxml/deadbase/elix/100/*.png
 
-# ignore test strategies
-[Ss]trategies/[Tt]est*.ini
-[Ss]trategies/[Ss]trategy 2016*.ini
-# ignore csv test scripts
-CSV/Attack/[Tt]est*.csv
-CSV/THsnipe/[Tt]est*.csv
-
-![Ii]mages/Storages/Gold/*.png
-![Ii]mages/Storages/Elixir/*.png
-
-# Debug
-[Ll]ib/[Dd]ebug/
-[Ll]ib/[Tt]est.txt
-EnableMBRDebug.txt
-ImgLocDebug.txt
-
-# SQL (not in use)
-*.sqlite3
-*.db
-
-# Release files
-LastVersion*.txt
-TestVersion*.txt
-*_stripped.au3
-
 #Sam Mod image
 ![Ii]mages/triangle_left.bmp
 ![Ii]mages/triangle_right.bmp
-![Ii]mages/CapacityStructure/*.*
-![Ii]mages/ELIXIR/6/*.*
-![Ii]mages/ELIXIR/7/*.*
-![Ii]mages/ELIXIR/8/*.*
-![Ii]mages/ELIXIR/9/*.*
-![Ii]mages/ELIXIR/10/*.*
-![Ii]mages/ELIXIR/11/*.*
-![Ii]mages/ELIXIR/12/*.*
-![Ii]mages/ELIXIR50PERCENT/12/*.*
-![Ii]mages/ELIXIR75PERCENT/6/*.*
-![Ii]mages/ELIXIR75PERCENT/7/*.*
-![Ii]mages/ELIXIR75PERCENT/8/*.*
-![Ii]mages/ELIXIR75PERCENT/9/*.*
-![Ii]mages/ELIXIR75PERCENT/10/*.*
-![Ii]mages/ELIXIR75PERCENT/11/*.*
-![Ii]mages/ELIXIR75PERCENT/12/*.*
-![Ii]mages/ElixSnow/*.*
-![Ii]mages/TH/4-6/*.*
-![Ii]mages/TH/7/*.*
-![Ii]mages/TH/8/*.*
-![Ii]mages/TH/9/*.*
-![Ii]mages/TH/10/*.*
-![Ii]mages/TH/11/*.*
 !COCBot/SamM0d/[Ii]mages/Army/*.*
 !COCBot/SamM0d/[Ii]mages/Army/Queue/*.*
+!COCBot/SamM0d/[Ii]mages/Army/Train/*.*
 !COCBot/SamM0d/[Ii]mages/Spell/*.*
 !COCBot/SamM0d/[Ii]mages/Spell/OnBrewSpell/*.*
 !COCBot/SamM0d/[Ii]mages/Spell/QueueSpell/*.*
@@ -168,5 +121,30 @@ TestVersion*.txt
 !MyBot.run.Watchdog.exe
 !MyBot.run.Wmi.exe
 ![Ll]ib/*.dll
-![Ll]ib/ImgLocDebugData/ImageDebug/
-![Ll]ib/ImgLocDebugData/RedlineDebug/
+
+# ignore test strategies
+[Ss]trategies/[Tt]est*.ini
+[Ss]trategies/[Ss]trategy 2016*.ini
+# ignore csv test scripts
+CSV/Attack/[Tt]est*.csv
+CSV/THsnipe/[Tt]est*.csv
+
+
+
+![Ii]mages/Storages/Gold/*.png
+![Ii]mages/Storages/Elixir/*.png
+
+# Debug
+[Ll]ib/[Dd]ebug/
+[Ll]ib/[Tt]est.txt
+EnableMBRDebug.txt
+ImgLocDebug.txt
+
+# SQL (not in use)
+*.sqlite3
+*.db
+
+# Release files
+LastVersion*.txt
+TestVersion*.txt
+*_stripped.au3
