--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,7 @@
 #Sam Mod image
 ![Ii]mages/triangle_left.bmp
 ![Ii]mages/triangle_right.bmp
+!COCBot/SamM0d/[Ii]mages/TrainButtons/*.*
 !COCBot/SamM0d/[Ii]mages/Troops/*.*
 !COCBot/SamM0d/[Ii]mages/Troops/Queue/*.*
 !COCBot/SamM0d/[Ii]mages/Troops/Train/*.*
