--- a/.gitignore
+++ b/.gitignore
@@ -104,11 +104,11 @@
 !COCBot/SamM0d/[Ii]mages/Troops/*.*
 !COCBot/SamM0d/[Ii]mages/Troops/Queue/*.*
 !COCBot/SamM0d/[Ii]mages/Troops/Train/*.*
-!COCBot/SamM0d/[Ii]mages/Troops/Train/CC/*.*
+!COCBot/SamM0d/[Ii]mages/Troops/CC/*.*
 !COCBot/SamM0d/[Ii]mages/Spells/*.*
 !COCBot/SamM0d/[Ii]mages/Spells/Brew/*.*
 !COCBot/SamM0d/[Ii]mages/Spells/Queue/*.*
-!COCBot/SamM0d/[Ii]mages/Spells/Queue/CC/*.*
+!COCBot/SamM0d/[Ii]mages/Spells/CC/*.*
 !COCBot/SamM0d/[Ii]mages/HeroStatus/*.*
 !COCBot/SamM0d/[Ii]mages/OCR/armybuildinfo/*.*
 !COCBot/SamM0d/[Ii]mages/OCR/armycap/*.*
@@ -131,8 +131,6 @@
 # ignore csv test scripts
 CSV/Attack/[Tt]est*.csv
 CSV/THsnipe/[Tt]est*.csv
-
-
 
 ![Ii]mages/Storages/Gold/*.png
 ![Ii]mages/Storages/Elixir/*.png
