--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,7 @@
 !COCBot/SamM0d/[Ii]mages/Spells/Queue/*.*
 !COCBot/SamM0d/[Ii]mages/Spells/CC/*.*
 !COCBot/SamM0d/[Ii]mages/HeroStatus/*.*
+!COCBot/SamM0d/[Ii]mages/FriendlyChallenge/*.*
 !COCBot/SamM0d/[Ii]mages/OCR/armybuildinfo/*.*
 !COCBot/SamM0d/[Ii]mages/OCR/armycap/*.*
 !COCBot/SamM0d/[Ii]mages/OCR/armyqty/*.*
